# gw2-identified

./: .dockerignore  .gitignore  Dockerfile  README.md  identified.sqlite  package-lock.json  package.json  pyproject.toml
identified/: __init__.py  auth.py  blog.py  constants.py  schema.sql  user.py
identified/static/: output.css  style.css
identified/templates/: base.html  index.html
identified/templates/auth/: login.html  register.html
identified/templates/blog/: index.html
identified/templates/user/: create.html  index.html  update.html
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py
