[project]
name = "identified"
version = "1.0.0"
description = "Unidentied salvage tracking app for GW2."
dependencies = [
  "flask",
  "gunicorn",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["identified"]
